resolved overflow y issue on workflow page - it was the trigger component on the reactflow component

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,11 @@
 @import "tailwindcss";
 
+body {
+  height: 100%;
+  margin: 0;
+  background-color: yellow;
+}
+
 /**/
 /* : root { */
 /*   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif; */
